# octnet-completion

./: .gitignore  README.md  build_cpu.sh
cmake/: FindTorch.cmake
core/: CMakeLists.txt
core/src/: activations.cpp  bn.cpp  core.cpp  fc.cpp  io.cpp  loss.cpp  o2d.cpp  split.cpp
core/test/: test_bn.cpp  test_fc.cpp  test_octree.cpp
core_gpu/: CMakeLists.txt
core_gpu/src/: activations.cu  bn.cu  col2oc.cu  concat.cu  conv.cu  conv_mm.cu  core.cu  d2o.cu  loss.cu  math.cu  o2d.cu  oc2col.cu  split.cu
core_gpu/test/: test_bn.cu
create/: CMakeLists.txt
create/src/: create.cpp  create_dense.cpp  create_dense_features.cpp  create_mesh.cpp  create_obj.cpp  create_off.cpp  create_pc.cpp  dense.cpp  utils.cpp
create/test/: test_create.cpp
examples/cpp/: 1d_classification.cpp  2d_conv_pool.cpp  2d_create_print.cpp  3d_auto_encoder.cpp  3d_classification.cpp  CMakeLists.txt
examples/cpp/cmake/: FindOctNetCore.cmake  FindOctNetCoreGPU.cmake  FindOctNetCreate.cmake  LibFindMacros.cmake
examples/py/: 2d_conv.py  2d_levels.py
examples/th/: 10155655850468db78d106ce0a280f87__0__.sdf  3d_classification.lua  3d_classification_bn.lua  3d_classification_bn_gpu.lua  3d_classification_gpu.lua  3d_test.lua  bg.dot  completion_main.lua  completion_model.lua  completion_train.lua  create_from_dense.lua  cunn_cutorch_test.lua  dataloader.lua  f_ops.lua  fg.dot  oc_weight_init.lua  read_data.py  struct_main.lua  struct_model.lua  struct_test.lua  struct_train.lua  struct_visualize.py  test.oc  train.lua  visualize.py
py/: pyoctnet.cpp  pyoctnet.pyx  setup.py
th/cpu/: CMakeLists.txt
th/gpu/: CMakeLists.txt
th/oc/: CDHWToOctree.lua  OctreeBCELevelCriterion.lua  OctreeConcat.lua  (+17 more)
(+33 files in other folders)
